--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,27 @@
 .header {
   display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+
+.header__dropdown {
+  display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+}
+
+.header__left {
+  flex: 0.9;
+}
+
+.header__infobox {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 990px) {
+  .header {
+    flex-direction: column;
+  }
 }
